force-app/main/default/objects/Opportunity/fields/Amount_available__c.field-meta.xml
<CustomField>
    <fullName>Amount_available__c</fullName>
    <formula>Account.Amount_available__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Available</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>