force-app/main/default/objects/Opportunity/fields/CChEN_Approved__c.field-meta.xml
<CustomField>
    <fullName>CChEN_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CChEN Approved</label>
    <type>Checkbox</type>
</CustomField>