force-app/main/default/objects/Opportunity/fields/CChEN_Attached__c.field-meta.xml
<CustomField>
    <fullName>CChEN_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CChEN Attached</label>
    <type>Checkbox</type>
</CustomField>