force-app/main/default/objects/Opportunity/fields/DEA_Review__c.field-meta.xml
<CustomField>
    <fullName>DEA_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Only USA</inlineHelpText>
    <label>DEA Review</label>
    <type>Checkbox</type>
</CustomField>