force-app/main/default/objects/Opportunity/fields/Duracion_de_contrato__c.field-meta.xml
<CustomField>
    <fullName>Duracion_de_contrato__c</fullName>
    <inlineHelpText>Meses</inlineHelpText>
    <label>Duración de contrato</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>