force-app/main/default/objects/Opportunity/fields/Extra_Cost__c.field-meta.xml
<CustomField>
    <fullName>Extra_Cost__c</fullName>
    <label>Extra Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>