force-app/main/default/objects/Opportunity/fields/Insurance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Amount__c</fullName>
    <formula>Account.Insurance_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurance Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>