force-app/main/default/objects/Opportunity/fields/SQM_Approved_Amount__c.field-meta.xml
<CustomField>
    <fullName>SQM_Approved_Amount__c</fullName>
    <formula>Account.SQM_Approved_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SQM Approved Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>