force-app/main/default/objects/Opportunity/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <label>Territory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>REGION 1: NAFTA</fullName>
            </value>
            <value>
                <fullName>REGION 2: ASOC</fullName>
            </value>
            <value>
                <fullName>REGION 3: JAPAN</fullName>
            </value>
            <value>
                <fullName>REGION 4: CHINA</fullName>
            </value>
            <value>
                <fullName>REGION 5: LATAM</fullName>
            </value>
            <value>
                <fullName>REGION 6: EUROPE - MIDDLE EAST - AFRICA - INDIA</fullName>
            </value>
            <value>
                <fullName>REGION 7: INDIA</fullName>
            </value>
            <value>
                <fullName>REGION 1: NAFTA, EMEA, LATAM</fullName>
                <isActive>false</isActive>
                <label>REGION 1: NAFTA, EMEA, LATAM</label>
            </value>
            <value>
                <fullName>REGION 2: ASOC, JAPAN</fullName>
                <isActive>false</isActive>
                <label>REGION 2: ASOC, JAPAN</label>
            </value>
            <value>
                <fullName>REGION 3: INDIA</fullName>
                <isActive>false</isActive>
                <label>REGION 3: INDIA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>