force-app/main/default/objects/Opportunity/fields/test_Quality_Grade__c.field-meta.xml
<CustomField>
    <fullName>test_Quality_Grade__c</fullName>
    <label>Quality/Grade</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Quality_Grade</valueSetName>
    </valueSet>
</CustomField>