force-app/main/default/objects/Opportunity/fields/Total_Volume__c.field-meta.xml
<CustomField>
    <fullName>Total_Volume__c</fullName>
    <inlineHelpText>Volumen total a considerar para parametro Ajuste de VOlumen</inlineHelpText>
    <label>Total Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>