force-app/main/default/objects/Opportunity/fields/Type_of_Contract__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Contract__c</fullName>
    <formula>IF(ISPICKVAL(Type_of_Negotiation__c, &quot;Contract&quot;), TEXT(Contract.Type_of_contract__c), &quot;Spot&quot;)</formula>
    <label>Type of Contract</label>
    <type>Text</type>
</CustomField>