force-app/main/default/objects/Opportunity/fields/Type_of_Negotiation__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Negotiation__c</fullName>
    <label>Type of Negotiation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Spot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>