force-app/main/default/objects/Opportunity/recordTypes/Principal.recordType-meta.xml
<RecordType>
    <fullName>Principal</fullName>
    <active>true</active>
    <businessProcess>Proceso Oportunidad Supply Aggrement</businessProcess>
    <label>Principal</label>
</RecordType>