force-app/main/default/objects/Opportunity/validationRules/CCHEN.validationRule-meta.xml
<ValidationRule>
    <fullName>CCHEN</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(StageName,&quot;Closed Won&quot;) &amp;&amp; 
OR(Account.Validez_CCHEN__c  &lt; TODAY(),
Account.Parent.Validez_CCHEN__c &lt; TODAY()) &amp;&amp; 
OR(ISPICKVAL(Product__c, &quot;Lithium Carbonate&quot;),
ISPICKVAL(Product__c, &quot;	Lithium Hydroxide&quot;))</errorConditionFormula>
    <errorMessage>You cannot close an opportunity won if the client does not have their CCHEN documentation in force</errorMessage>
</ValidationRule>