force-app/main/default/objects/Opportunity/validationRules/Contract_Validation_activated.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_Validation_activated</fullName>
    <active>true</active>
    <description>Restricción para continuar con la creación de oportunidades</description>
    <errorConditionFormula>and(
ispickval(
Type_of_Negotiation__c, &quot;Contract&quot;) &amp;&amp;
not(ispickval(Contract.Status, &apos;Activated&apos;)))</errorConditionFormula>
    <errorMessage>If the Contract is not activated you can&apos;t create the Opportunity</errorMessage>
</ValidationRule>