force-app/main/default/objects/Opportunity/validationRules/EEUU_Currency.validationRule-meta.xml
<ValidationRule>
    <fullName>EEUU_Currency</fullName>
    <active>false</active>
    <errorConditionFormula>IF(
				AND(
								ISPICKVAL(CurrencyIsoCode, &quot;USD - Dólar de EE.UU.&quot;),
								OR(
												ISPICKVAL(Territory__c, &quot;REGION 1: NAFTA &amp; EMEA&quot;),
								    ISPICKVAL(Territory__c, &quot;REGION 2: ASOC&quot;),
								    ISPICKVAL(Territory__c, &quot;REGION 3: JAPAN&quot;),
								    ISPICKVAL(Territory__c, &quot;REGION 4: CHINA&quot;),
								    ISPICKVAL(Territory__c, &quot;REGION 5: LATAM&quot;),
								    ISPICKVAL(Territory__c, &quot;REGION 6: EUROPE - MIDDLE EAST - AFRICA&quot;)
												)
								),
				TRUE, FALSE
				)</errorConditionFormula>
    <errorMessage>You can only quote in US Dollar</errorMessage>
</ValidationRule>