force-app/main/default/objects/Opportunity/validationRules/LithiumC_and_CChEN_Approved_verification.validationRule-meta.xml
<ValidationRule>
    <fullName>LithiumC_and_CChEN_Approved_verification</fullName>
    <active>false</active>
    <errorConditionFormula>IF(
				AND(
								ISPICKVAL(Product__c, &quot;Lithium Carbonate&quot;),
								ISPICKVAL(StageName, &quot;Closed Won&quot;),
								CChEN_Approved__c = false,
								Account.CChEN_Valido__c = false),
				TRUE, FALSE)</errorConditionFormula>
    <errorMessage>You must attach and request approval for the CChen document.</errorMessage>
</ValidationRule>