force-app/main/default/objects/Opportunity/validationRules/Loss_reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Loss_reason</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
				AND(
								ISPICKVAL(StageName, &quot;Closed Lost&quot;),
							 ISBLANK(TEXT(Loss_Reason__c))),
				true, false)</errorConditionFormula>
    <errorMessage>You must select a reason for the lost Opportunity.</errorMessage>
</ValidationRule>