force-app/main/default/objects/Opportunity/validationRules/Min_Variables_Requested_CPQ.validationRule-meta.xml
<ValidationRule>
    <fullName>Min_Variables_Requested_CPQ</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW() &amp;&amp; 
OR(
  ISBLANK(TEXT(Account.Product__c)), 
  ISBLANK(TEXT(Account.A3__c)),
  ISBLANK(TEXT(Account.Zone__c)), 
  ISBLANK(TEXT(Account.Territory__c)), 
  ISBLANK(Account.W2P_Factor__c))</errorConditionFormula>
    <errorMessage>Please complete the fields Territory, Zone, W2P, Product, and Application before proceeding</errorMessage>
</ValidationRule>