force-app/main/default/objects/Opportunity/validationRules/Product_Contract.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Contract</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Type_of_Negotiation__c, &quot;Contract&quot;) &amp;&amp;
OR(
ISNULL(ContractId),  
TEXT(Contract.Product__c) &lt;&gt; TEXT(Product__c))</errorConditionFormula>
    <errorMessage>The product of the Opportunity must be the same as the one selected in the Contract</errorMessage>
</ValidationRule>