force-app/main/default/objects/Opportunity/validationRules/Supply_Agreements.validationRule-meta.xml
<ValidationRule>
    <fullName>Supply_Agreements</fullName>
    <active>true</active>
    <description>Valida que el usuario indique un SA para Oportunidades cerradas ganadas de tipo Contrato</description>
    <errorConditionFormula>TEXT(Type_of_Negotiation__c) = &quot;Contract&quot;  &amp;&amp; 
ISBLANK(ContractId)</errorConditionFormula>
    <errorDisplayField>ContractId</errorDisplayField>
    <errorMessage>For Contract-type Opportunities, you must indicate the previously created SA.</errorMessage>
</ValidationRule>