force-app/main/default/objects/Opportunity/validationRules/Total_Volumen_vs_Volumen.validationRule-meta.xml
<ValidationRule>
    <fullName>Total_Volumen_vs_Volumen</fullName>
    <active>false</active>
    <description>Validate that the total volumen &gt;= Volumen in the opportunity.</description>
    <errorConditionFormula>Total_Volume__c   &lt;=   Volume__c</errorConditionFormula>
    <errorMessage>Please check the information, the Total Volume must be higher or equal than Volume.</errorMessage>
</ValidationRule>