force-app/main/default/objects/Opportunity/validationRules/Valid_offers_accepted.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_offers_accepted</fullName>
    <active>false</active>
    <errorConditionFormula>IF(
				AND(
								ISPICKVAL(StageName, &quot;Closed Won&quot;),
								 QuotesInOpp__c &lt; 1
								),
				TRUE, FALSE)</errorConditionFormula>
    <errorMessage>You must have an offer accepted by the client before closing Opportunity as closed won</errorMessage>
</ValidationRule>